--- a/src/styles/_works.scss
+++ b/src/styles/_works.scss
@@ -44,7 +44,26 @@
       }
 
       .actions {
-        display: none;
+        display: flex;
+        flex-direction: column;
+        opacity: 0;
+        transition: .5s;
+
+        .like, .more, .chain{
+          border: none;
+          width: 40px;
+          height: 40px;
+          border-radius: 20px;
+          background-color: $main-green;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        }
+
+        .like, .more {
+          margin-bottom: 10px;
+        }
+
         align-self: center;
         position: absolute;
       }
@@ -56,27 +75,11 @@
       &:hover {
 
         .works-list-data {
-          display: none;
+          opacity: 0;
         }
 
         .actions {
-          display: flex;
-          flex-direction: column;
-
-          .like, .more, .chain{
-            border: none;
-            width: 40px;
-            height: 40px;
-            border-radius: 20px;
-            background-color: $main-green;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-          }
-
-          .like, .more {
-            margin-bottom: 10px;
-          }
+          opacity: 1;
         }
       }
 
@@ -91,6 +94,8 @@
       justify-content: space-between;
       align-items: flex-end;
       width: 250px;
+      opacity: 1;
+      transition: .5s;
 
       .info {
         display: flex;
