--- a/src/styles/main/_features.scss
+++ b/src/styles/main/_features.scss
@@ -46,7 +46,7 @@
   }
   .design::before {
     content: "";
-    background: url("../img/brilliant.png");
+    background: url("../../img/brilliant.png");
     width: 39px;
     height: 39px;
     display: block;
@@ -54,7 +54,7 @@
 
   .on-mouse::before {
     content: "";
-    background: url("../img/title.png");
+    background: url("../../img/title.png");
     width: 36px;
     height: 33px;
     display: block;
@@ -62,7 +62,7 @@
 
   .documentation::before {
     content: "";
-    background: url("../img/documentation.png");
+    background: url("../../img/documentation.png");
     width: 32px;
     height: 32px;
     display: block;
@@ -70,7 +70,7 @@
 
   .responsive::before {
     content: "";
-    background: url("../img/cloud.png");
+    background: url("../../img/cloud.png");
     width: 41px;
     height: 26px;
     display: block;
