--- a/src/styles/main/_header.scss
+++ b/src/styles/main/_header.scss
@@ -47,7 +47,7 @@
       content: "";
       width: 14px;
       height: 13px;
-      background: url("../img/login-icon.png");
+      background: url("../../img/login-icon.png");
       margin-right: 5px;
     }
 
@@ -69,7 +69,7 @@
       content: "";
       width: 14px;
       height: 14px;
-      background: url("../img/register-icon.png");
+      background: url("../../img/register-icon.png");
       margin-right: 5px;
     }
 
