--- a/src/styles/main/_quote.scss
+++ b/src/styles/main/_quote.scss
@@ -58,7 +58,7 @@
 
     &::before {
       content: "";
-      background: url("../img/quotes.png");
+      background: url("../../img/quotes.png");
       width: 45px;
       height: 37px;
       display: block;
