--- a/src/styles/main/_works.scss
+++ b/src/styles/main/_works.scss
@@ -118,7 +118,7 @@
       .likes {
         &::before {
           content: "";
-          background: url("../img/likes.png");
+          background: url("../../img/likes.png");
           display: block;
           width: 14px;
           height: 12px;
