--- a/src/styles/main/App.scss
+++ b/src/styles/main/App.scss
@@ -26,6 +26,12 @@
 
 @import "../blog-grid/blog-grid";
 
+@import "../blog-item/content";
+
+@import "../blog-item/comments";
+
+@import "../blog-item/sidebar";
+
 
 
 
