blog-grid item completed

--- a/src/styles/blog-item/_content.scss
+++ b/src/styles/blog-item/_content.scss
@@ -121,6 +121,9 @@
 
 .related {
 
+  margin-top: 50px;
+  padding-bottom: 50px;
+
   &-title {
     color: $sidebar-title;
     font: 700 18px $font;
