--- a/src/styles/blog-item/_comments.scss
+++ b/src/styles/blog-item/_comments.scss
@@ -78,11 +78,13 @@
       position: absolute;
       right: 30px;
       top: 30px;
-      border: none;
       background: none;
       color: $main-green;
       font: 700 14px $font;
-      display: none;
+      display: inline-block;
+      opacity: 0;
+      transition: .5s;
+      border: 5px solid white;
     }
 
     &-title {
@@ -102,7 +104,7 @@
         border: 5px solid #dee7ed;
 
         .ocomments-reply {
-          display: inline-block;
+          opacity: 1;
         }
       }
 
