--- a/src/styles/main/App.css
+++ b/src/styles/main/App.css
@@ -1556,6 +1556,125 @@ ul {
     display: block;
     margin-top: 5px; }
 
+.swork {
+  padding: 50px 0 100px;
+  display: flex;
+  justify-content: center; }
+  .swork-img {
+    position: relative; }
+    .swork-img img {
+      width: 100%; }
+    .swork-img-control {
+      position: absolute;
+      padding: 10px 15px;
+      width: 40px;
+      height: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: #fff;
+      border: none;
+      top: calc(50% - 18px); }
+      .swork-img-control i {
+        color: #ffae00; }
+      .swork-img-control:hover {
+        background-color: #ffae00; }
+        .swork-img-control:hover i {
+          color: #fff; }
+      .swork-img-control.prev {
+        left: 40px; }
+      .swork-img-control.next {
+        right: 40px; }
+      .swork-img-control.outline {
+        display: inline;
+        border: 2px solid #f5f5f6;
+        position: absolute;
+        top: 0 !important;
+        padding: 6px 15px 8px; }
+        .swork-img-control.outline.next {
+          left: 40px !important; }
+        .swork-img-control.outline.prev {
+          left: 0 !important; }
+        .swork-img-control.outline:hover {
+          background-color: #fff;
+          border: 2px solid #ffae00; }
+          .swork-img-control.outline:hover i {
+            color: #ffae00; }
+        @media (max-width: 991px) {
+          .swork-img-control.outline {
+            display: none !important; } }
+  .swork-likes {
+    color: #555;
+    font: 300 14px Oxygen, Helvetica, Georgia, sans-serif;
+    display: block;
+    margin-top: 50px; }
+    .swork-likes::before {
+      content: "\f004";
+      font: normal normal normal 14px/1 FontAwesome;
+      font-size: inherit;
+      text-rendering: auto;
+      -webkit-font-smoothing: antialiased;
+      color: #c3c3c3;
+      margin-right: 10px; }
+  .swork-tags {
+    flex-wrap: wrap;
+    margin: 30px 0; }
+    .swork-tags-item::after {
+      content: ",";
+      margin-right: 5px;
+      color: #ffc600;
+      font: 300 14px Oxygen, Helvetica, Georgia, sans-serif; }
+    .swork-tags-item:last-of-type::after {
+      content: ""; }
+    .swork-tags-link {
+      color: #ffc600;
+      font: 300 14px Oxygen, Helvetica, Georgia, sans-serif; }
+      .swork-tags-link:hover {
+        color: #ffc600;
+        text-decoration: none; }
+  .swork-description {
+    font: 300 14px/24px Oxygen, Helvetica, Georgia, sans-serif;
+    color: #3b4954;
+    margin-bottom: 40px;
+    max-width: 200px; }
+    .swork-description.title {
+      font-weight: 700;
+      margin-bottom: 20px; }
+  .swork-checkboxes {
+    margin-bottom: 50px; }
+    .swork-checkboxes-item {
+      font: 300 14px/24px Oxygen, Helvetica, Georgia, sans-serif;
+      color: #3b4954;
+      margin-bottom: 15px; }
+      .swork-checkboxes-item::before {
+        content: "\f046";
+        font: normal normal normal 14px/1 FontAwesome;
+        font-size: inherit;
+        text-rendering: auto;
+        -webkit-font-smoothing: antialiased;
+        color: #ffae00;
+        margin-right: 10px; }
+  .swork-buy {
+    background-color: transparent;
+    border: 2px solid #02baab;
+    font: 700 12px Oxygen, Helvetica, Georgia, sans-serif;
+    color: #02baab;
+    padding: 15px 25px;
+    text-transform: uppercase;
+    letter-spacing: 0.9px;
+    border-radius: 0;
+    transition: .5s;
+    border: 2px solid #ffae00;
+    color: #ffae00; }
+    .swork-buy:hover {
+      background-color: #02baab;
+      border: 2px solid #02baab; }
+    .swork-buy:hover {
+      background-color: #ffae00;
+      border: 2px solid #ffae00;
+      text-decoration: none;
+      color: #fff; }
+
 /*.App {
   text-align: center;
 }
